Move away of deprecated Class.newInstance in tests.
Rather use Class.getDeclaredConstructor().newInstance.

Change-Id: I7ee6f4527dbc5485b29a0f1c68aaec8442bbb457
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>